--- a/css/style.css
+++ b/css/style.css
@@ -218,12 +218,12 @@
     margin-top: 50px;
 }
 
+
 .main-categories-img-list {
     list-style: none;
     margin-top: 20px;
     overflow-x: auto;
-    margin-left: -5px;
-    margin-right: -5px;
+
 }
 
 .main-categories-img-item {
@@ -231,22 +231,28 @@
     padding: 0 5px;
 }
 
+.main-categories-img-item:first-child {
+    padding-left: 0;
+}
+
+.main-categories-img-item:last-child {
+    padding-right: 0;
+}
+
+
 .main-categories-img-item img {
     display: block;
     min-width: 100%;
     object-fit: cover;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 
 .categories-desc-img {
     position: absolute;
     bottom: 0;
-    right: auto;
-    left: auto;
+    right: 50%;
+    transform: translateX(50%);
     text-align: center;
-    width: 100%;
     margin-bottom: 15px;
     font-weight: 400;
     font-size: 2.2rem;
